{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 841,
  "lineage": "5319535a-ca3d-5c0c-f344-48e3158c7a5f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "arm_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0412a93e5c3536055",
            "domain": "vpc",
            "id": "eipalloc-0412a93e5c3536055",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-217-95-37.compute-1.amazonaws.com",
            "public_ip": "44.217.95.37",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Project": "ArhitekturaRacunarskihMreza"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "arm_server_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09cc96665c243d56f",
            "arn": "arn:aws:ec2:us-east-1:243867832729:instance/i-085e33f29dbf33c7b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-085e33f29dbf33c7b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03ed29cea6163ef02",
            "private_dns": "ip-192-168-1-4.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:243867832729:key/567603d4-e70a-4d10-b523-b54840d0c0f3",
                "throughput": 0,
                "volume_id": "vol-08b96b808b9675db3",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0034fe4971e0e229b",
            "tags": {
              "Name": "armz19290priv"
            },
            "tags_all": {
              "Name": "armz19290priv",
              "Project": "ArhitekturaRacunarskihMreza"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d7ab5ccf5c0414f"
            ]
          },
          "dependencies": [
            "aws_ecs_cluster.arm_ecs_cluster",
            "aws_kms_key.ebs_encryption_key",
            "aws_security_group.arm_security_group",
            "aws_subnet.arm_subnet_private",
            "aws_vpc.arm_vpc",
            "data.aws_ami.ecs_optimized_amazon_linux_ami",
            "data.aws_caller_identity.current",
            "data.aws_iam_instance_profile.lab_instance_profile",
            "data.aws_iam_policy_document.ebs_encryption_kms_key_policy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "arm_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243867832729:internet-gateway/igw-0c170f17026f65d88",
            "id": "igw-0c170f17026f65d88",
            "owner_id": "243867832729",
            "tags_all": {
              "Project": "ArhitekturaRacunarskihMreza"
            },
            "vpc_id": "vpc-0c868e92361d4d761"
          },
          "dependencies": [
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "arm_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0412a93e5c3536055",
            "association_id": "eipassoc-00d4c8b6939f3acce",
            "connectivity_type": "public",
            "id": "nat-08575ac899965afc3",
            "network_interface_id": "eni-02d786b7a661d5b46",
            "private_ip": "192.168.1.56",
            "public_ip": "44.217.95.37",
            "subnet_id": "subnet-0dd37f4d8d3058f9d",
            "tags_all": {
              "Project": "ArhitekturaRacunarskihMreza"
            }
          },
          "dependencies": [
            "aws_eip.arm_eip",
            "aws_internet_gateway.arm_igw",
            "aws_subnet.arm_subnet_public",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "arm_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243867832729:route-table/rtb-09527c70cb09d99a4",
            "id": "rtb-09527c70cb09d99a4",
            "owner_id": "243867832729",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08575ac899965afc3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Project": "ArhitekturaRacunarskihMreza"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c868e92361d4d761"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.arm_eip",
            "aws_internet_gateway.arm_igw",
            "aws_nat_gateway.arm_nat_gateway",
            "aws_subnet.arm_subnet_public",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "arm_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243867832729:route-table/rtb-07c5c6189683ed208",
            "id": "rtb-07c5c6189683ed208",
            "owner_id": "243867832729",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c170f17026f65d88",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Project": "ArhitekturaRacunarskihMreza"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c868e92361d4d761"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.arm_igw",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "arm_rt_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012131e9431f3e466",
            "route_table_id": "rtb-09527c70cb09d99a4",
            "subnet_id": "subnet-0034fe4971e0e229b"
          },
          "dependencies": [
            "aws_eip.arm_eip",
            "aws_internet_gateway.arm_igw",
            "aws_nat_gateway.arm_nat_gateway",
            "aws_route_table.arm_private_rt",
            "aws_subnet.arm_subnet_private",
            "aws_subnet.arm_subnet_public",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "arm_rt_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f120a7b554800e99",
            "route_table_id": "rtb-07c5c6189683ed208",
            "subnet_id": "subnet-0dd37f4d8d3058f9d"
          },
          "dependencies": [
            "aws_internet_gateway.arm_igw",
            "aws_route_table.arm_public_rt",
            "aws_subnet.arm_subnet_public",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "arm_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243867832729:security-group/sg-04d7ab5ccf5c0414f",
            "description": "Security group for ARM EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP egress",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS egress",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic in security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-04d7ab5ccf5c0414f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP ingress",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS ingress",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH ingress",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic in security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "arm_security_group",
            "name_prefix": "",
            "owner_id": "243867832729",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Project": "ArhitekturaRacunarskihMreza"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c868e92361d4d761"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.arm_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arm_subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243867832729:subnet/subnet-0034fe4971e0e229b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0034fe4971e0e229b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "243867832729",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "armz19290private"
            },
            "tags_all": {
              "Name": "armz19290private",
              "Project": "ArhitekturaRacunarskihMreza"
            },
            "vpc_id": "vpc-0c868e92361d4d761"
          },
          "dependencies": [
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arm_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243867832729:subnet/subnet-0dd37f4d8d3058f9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd37f4d8d3058f9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "243867832729",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "armz19290public"
            },
            "tags_all": {
              "Name": "armz19290public",
              "Project": "ArhitekturaRacunarskihMreza"
            },
            "vpc_id": "vpc-0c868e92361d4d761"
          },
          "dependencies": [
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "arm_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243867832729:vpc/vpc-0c868e92361d4d761",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.1.0/26",
            "default_network_acl_id": "acl-00287faed2f9ddb8e",
            "default_route_table_id": "rtb-07028afc11b31196e",
            "default_security_group_id": "sg-047004c9002240d49",
            "dhcp_options_id": "dopt-0ac71a6ddc4cb9f4a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c868e92361d4d761",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07028afc11b31196e",
            "owner_id": "243867832729",
            "tags_all": {
              "Project": "ArhitekturaRacunarskihMreza"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}